targets/srv0/k3s/geoip/geoip.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geoip
  namespace: base
  labels:
    app: geoip-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geoip-service
  template:
    metadata:
      labels:
        app: geoip-service
    spec:
      securityContext:
        runAsUser: $MY_UID
        runAsGroup: $MY_UID
        runAsNonRoot: true
      containers:
        - name: geoip
          image: imranrdev/geoip-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            readOnlyRootFilesystem: true
          resources:
            requests:
              memory: "16Mi"
            limits:
              memory: "32Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: geoip-data
              mountPath: /data
              readOnly: true
      volumes:
        - name: geoip-data
          persistentVolumeClaim:
            claimName: geoip-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: geoip-service
  namespace: base
spec:
  selector:
    app: geoip-service
  ports:
    - port: 8080
      targetPort: 8080
