targets/srv0/k3s/geoip/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-geoip-from-traefik
  namespace: base
spec:
  podSelector:
    matchLabels:
      app: geoip-service
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8080
  policyTypes:
    - Ingress
